try to add brick in simulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,10 +55,10 @@ add_message_files(
 )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  SendToolTo.srv
-)
+#add_service_files(
+#  FILES
+#  SendToolTo.srv
+#)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
